fix: spacing i promopanel

--- a/npm/designsystem/src/components/PromoPanel/styles.module.scss
+++ b/npm/designsystem/src/components/PromoPanel/styles.module.scss
@@ -12,7 +12,7 @@ $colors: 'neutral', 'blueberry', 'cherry';
   align-items: center;
   border-radius: 8px;
   padding-left: getSpacer(s);
-  padding-right: getSpacer(s);
+  padding-right: getSpacer(2xs);
   transition: background-color 0.15s ease-in-out;
 
   &:focus-within {
@@ -21,6 +21,10 @@ $colors: 'neutral', 'blueberry', 'cherry';
 
   @media (min-width: map.get($grid-breakpoints, xs)) {
     padding-left: 0;
+  }
+
+  @media (min-width: map.get($grid-breakpoints, sm)) {
+    padding-right: getSpacer(s);
   }
 
   @media (min-width: map.get($grid-breakpoints, md)) {
@@ -56,8 +60,8 @@ $colors: 'neutral', 'blueberry', 'cherry';
   &__content {
     display: flex;
     flex-direction: column;
+    flex-grow: 1;
     gap: getSpacer(3xs);
-    max-width: 696px;
     padding-top: getSpacer(m);
     padding-bottom: getSpacer(m);
 
@@ -81,15 +85,14 @@ $colors: 'neutral', 'blueberry', 'cherry';
   }
 
   &__icon {
-    margin-left: auto;
-    padding-left: getSpacer(s);
-
-    @media (min-width: map.get($grid-breakpoints, xs)) {
-      display: none;
-    }
+    margin-left: getSpacer(xs);
 
     @media (min-width: map.get($grid-breakpoints, sm)) {
-      display: block;
+      margin-left: getSpacer(s);
+    }
+
+    @media (min-width: map.get($grid-breakpoints, lg)) {
+      margin-left: getSpacer(l);
     }
   }
 }
